<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="40"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/backs1" />
            -->

        <TextView
            android:id="@+id/text_learn_mess"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/text_learn_play_on_piano" />

        <TextView
            android:id="@+id/textView2"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_learn_notes" />

        <androidx.cardview.widget.CardView
            style="@style/MyCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="30">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|top"
                    android:text="@string/text_music_list"
                    android:textColor="@color/black"
                    android:textSize="36sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/info_text"
                    tools:listitem="@layout/recyclerview_item"
                    android:gravity="center_vertical|center_horizontal|top"
                    android:textColor="@color/black"

                    />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_toolkit_navigation"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/text_not_anything" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_toolkit_navigation_record"
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/text_record" />

            <TextView
                android:id="@+id/text_or"
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/text_or" />

            <TextView
                android:id="@+id/text_teach"
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/text_learn" />

            <TextView
                android:id="@+id/text_play"
                style="@style/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/text_play" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>