<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="40"
    tools:context=".QuizeNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textViewStyle"
            android:text="@string/text_learn_notes_and_music"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_notes_stan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/text_notes_stan"
                android:textAlignment="center"
                app:chipIcon="@drawable/notes"
                app:iconStartPadding="5dp"
                tools:ignore="NestedWeights" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_music_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/text_music_notes"
                android:textAlignment="center"
                app:chipIcon="@drawable/graphic_eq"
                app:iconStartPadding="5dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            tools:ignore="RtlSymmetry">


            <ImageView
                android:id="@+id/image_key_solfedgio"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/text_key_solfedgio"
                android:paddingTop="40dp"
                android:src="@drawable/key_solfedgio"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:id="@+id/notes_line_1"
                style="@style/NoteLineStyle"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_alignStart="@+id/image_key_solfedgio"
                android:layout_marginTop="50dp">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/notes_line_2"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_alignStart="@+id/image_key_solfedgio"
                android:layout_marginTop="70dp"
                style="@style/NoteLineStyle">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/notes_line_3"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_alignStart="@+id/image_key_solfedgio"
                android:layout_marginTop="90dp"
                style="@style/NoteLineStyle">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/notes_line_4"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_alignStart="@+id/image_key_solfedgio"
                android:layout_marginTop="110dp"
                style="@style/NoteLineStyle" />

            <LinearLayout
                android:id="@+id/notes_line_5"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_alignStart="@+id/image_key_solfedgio"
                android:layout_marginTop="130dp"
                style="@style/NoteLineStyle" />


            <Button
                android:id="@+id/button_selected_note"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/rounded_button" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_play_music_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Прослушать звук ноты"
                tools:ignore="NestedWeights" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="30"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/layout_note_do"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#30A1E1"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|top"
                    android:text="@string/text_note_do_ru"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|top"
                    android:text="@string/text_note_c_en"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_note_re"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#E3E3DB"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_note_re_ru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|top"
                    android:text="@string/text_note_re_ru"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_note_re_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|top"
                    android:text="@string/text_note_d_en"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_note_mi"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#F2FEDE"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_note_mi_ru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|top"
                    android:text="@string/text_note_mi_ru"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_note_e_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|top"
                    android:text="@string/text_note_e_en"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_note_fa"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#FFB4AB"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_note_fa_ru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|top"
                    android:text="@string/text_note_fa_ru"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_note_f_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|top"
                    android:text="@string/text_note_f_en"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_note_sol"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#9CDC52"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_note_sol_ru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|top"
                    android:text="@string/text_note_sol_ru"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_note_a_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|top"
                    android:text="@string/text_note_a_en"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_note_lya"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#A6F0EB"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_note_lya_ru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|top"
                    android:text="@string/text_note_lya_ru"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_note_b_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|top"
                    android:text="@string/text_note_b_en"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_note_si"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="#BA1A1A"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_note_si_ru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|top"
                    android:text="@string/text_note_si_ru"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_note_c_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|top"
                    android:text="@string/text_note_c_en"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="0.5"
                android:text="@string/text_score" />

            <TextView
                android:id="@+id/text_score_of_quize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/text_for_0" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_max_count_0_for_10" />

           <!-- <Button
                android:id="@+id/button_save_score"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:text="@string/save_counts"
                android:textSize="10sp"
                tools:ignore="SmallSp" />-->

        </LinearLayout>


    </LinearLayout>

</FrameLayout>